[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Assets/Parts/Defaults/Head.PNG" type="Texture" id=2]
[ext_resource path="res://Scenes/Font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/New Theme.tres" type="Theme" id=4]
[ext_resource path="res://Assets/Parts/Mouth/z-default_mouth.PNG" type="Texture" id=5]
[ext_resource path="res://Assets/Parts/Eyes/999_eyes.PNG" type="Texture" id=6]
[ext_resource path="res://Assets/Parts/Hair/z-default_hair.PNG" type="Texture" id=7]
[ext_resource path="res://Assets/Parts/Outfit/z-default_outfit.PNG" type="Texture" id=8]
[ext_resource path="res://Assets/Parts/Nose/z-default_nose.PNG" type="Texture" id=9]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Hair" type="Sprite" parent="."]
z_index = 6
texture = ExtResource( 7 )

[node name="Eyes" type="Sprite" parent="."]
z_index = 4
texture = ExtResource( 6 )

[node name="Nose" type="Sprite" parent="."]
z_index = 3
texture = ExtResource( 9 )

[node name="Mouth" type="Sprite" parent="."]
z_index = 2
texture = ExtResource( 5 )

[node name="HeadCircle" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 2 )

[node name="Outfit" type="Sprite" parent="."]
texture = ExtResource( 8 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 330, 45 )
current = true
zoom = Vector2( 3, 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 830.0
margin_top = -579.0
margin_right = 1330.0
margin_bottom = 581.0
custom_constants/separation = 40

[node name="HairButton" type="Button" parent="VBoxContainer"]
margin_right = 500.0
margin_bottom = 200.0
rect_min_size = Vector2( 500, 200 )
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "Hair"

[node name="EyesButton" type="Button" parent="VBoxContainer"]
margin_top = 240.0
margin_right = 500.0
margin_bottom = 440.0
rect_min_size = Vector2( 500, 200 )
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "Eyes"

[node name="NoseButton" type="Button" parent="VBoxContainer"]
margin_top = 480.0
margin_right = 500.0
margin_bottom = 680.0
rect_min_size = Vector2( 500, 200 )
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "Nose"

[node name="MouthButton" type="Button" parent="VBoxContainer"]
margin_top = 720.0
margin_right = 500.0
margin_bottom = 920.0
rect_min_size = Vector2( 500, 200 )
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "Mouth"

[node name="OutfitButton" type="Button" parent="VBoxContainer"]
margin_top = 960.0
margin_right = 500.0
margin_bottom = 1160.0
rect_min_size = Vector2( 500, 200 )
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "Outfit"

[node name="SaveButton" type="Button" parent="."]
margin_left = 916.0
margin_top = 1008.0
margin_right = 1216.0
margin_bottom = 1208.0
rect_min_size = Vector2( 300, 200 )
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "Save!"

[node name="Randomizer" type="Button" parent="."]
margin_left = 975.0
margin_top = -913.0
margin_right = 1270.0
margin_bottom = -727.0

[connection signal="pressed" from="VBoxContainer/HairButton" to="." method="_on_HairButton_pressed"]
[connection signal="pressed" from="VBoxContainer/EyesButton" to="." method="_on_EyesButton_pressed"]
[connection signal="pressed" from="VBoxContainer/NoseButton" to="." method="_on_NoseButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MouthButton" to="." method="_on_MouthButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OutfitButton" to="." method="_on_OutfitButton_pressed"]
[connection signal="pressed" from="SaveButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="Randomizer" to="." method="_on_Randomizer_pressed"]
